--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <!-- Nike Clone by Team (Zaki Noorani, Ammad Saleem, Muhammad Rayyan) -->
 
-
+    <h1>
+        Hello
+    </h1>
 
 
     <script src="script.js"></script>
